# qsp

./: .gitignore  .gitmodules  CMakeLists-oniguruma.txt.in  CMakeLists-wxWidgets.txt.in  CMakeLists.txt  CMakeLists.txt.in  GPL.txt  GPL_rus.txt  LGPL.txt  LGPL_rus.txt  LICENSE  LICENSE_BSD_2Clause  LICENSE_BSD_3Clause  LICENSE_ru  QspConfig.cmake.in  README.md  qsp_config.h.cmakein
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  general_report.yml
aeroqsp/shell/: AeroQSP.vcproj  _cleanup.cmd
aeroqsp/shell/src/: AeroQSPApp.cpp  AeroQSPApp.h  AeroQSPFlash.cpp  AeroQSPFlash.h  AeroQSPFrame.cpp  AeroQSPFrame.h
bindings/: readme.txt
cmake/Modules/: Findoniguruma.cmake
help/: gam_desc.txt  linux_x86_build.txt  qsp-logo-vector.eps  qsp-logo_v1.ai  qsp-logo_v2.ai  qsp.hmx  qsp.hmxz  qsp.peg  qsp_grammar.peg
players/aeroqsp/shell/: AeroQSP.sln
players/aeroqsp/shell/src/: AeroQSPApp.h  AeroQSPFlash.h  AeroQSPFrame.cpp
players/classic/: _cleanup_linux_x86  linux_x86_build  linux_x86_cb.workspace  win32_vs.sln
players/classic/build_wx/: wxPatch-git.diff  wxPatch.diff
players/classic/create_lang/: qspgui_be.po  qspgui_by.po  qspgui_de.po  qspgui_en.po  qspgui_eo.mo  qspgui_eo.po  qspgui_ru.po  qspgui_uk.mo  qspgui_uk.po  qspgui_zh.po
players/classic/qsp/: linux_x86_qsp.cbp  win32_qsp.cbp  win32_qsp.vcproj  win32_qsp.vcxproj  win32_qsp.vcxproj.filters
players/classic/qspgui/: animwin.cpp  animwin.h  app.cpp  app.h  callbacks_gui.cpp  callbacks_gui.h  comtools.cpp  comtools.h  fmod.h  fmod_codec.h  fmod_dsp.h  fmod_memoryinfo.h  frame.cpp  frame.h  imgcanvas.cpp  imgcanvas.h  initevent.cpp  initevent.h  inputbox.cpp  inputbox.h  inputdlg.cpp  inputdlg.h  linux_x86_qspgui.cbp  listbox.cpp  listbox.h  msgdlg.cpp  msgdlg.h  textbox.cpp  textbox.h  transhelper.cpp  transhelper.h  win32_qspgui.cbp  win32_qspgui.vcproj  win32_qspgui.vcxproj  win32_qspgui.vcxproj.filters
players/qt_classic/: win32_vs.sln
players/qt_classic/qspgui/: qspgui.vcproj
qgen/: qgen.pro  qgen.sln  qgen.vcxproj  qgen.vcxproj.filters
qgen/include/: i_main_window_model.h  i_main_window_presenter.h  i_main_window_view.h  locations_list_box.h  main_window.h  main_window_presenter.h  menu_bar.h  settings.h  tool_bar.h
qgen/precompiled/: precompiled.h
qgen/resource/: about_logo.xpm  locslist_action_ball.xpm  locslist_folder_closed.xpm  locslist_folder_opened.xpm  locslist_location_ball_closed.xpm  locslist_location_ball_opened.xpm  locstabs_page_fixed.xpm  main_window.qrc  menu_exit.xpm  menu_file_open.xpm  menu_file_save.xpm  menu_game_info.xpm  menu_game_new.xpm  menu_game_play.xpm  menu_help.xpm  menu_help_search.xpm  menu_redo.xpm  menu_text_copy.xpm  menu_text_cut.xpm  menu_text_delete.xpm  menu_text_paste.xpm  menu_text_search.xpm  menu_undo.xpm  qgen.xpm  toolbar_action_delete.xpm  toolbar_action_new.xpm  toolbar_action_rename.xpm  toolbar_file_open.xpm  toolbar_file_save.xpm  toolbar_file_saveas.xpm  toolbar_game_info.xpm  toolbar_game_play.xpm  toolbar_location_clear.xpm  toolbar_location_copy.xpm  toolbar_location_delete.xpm  toolbar_location_new.xpm  toolbar_location_paste.xpm  toolbar_location_rename.xpm  toolbar_options.xpm  toolbar_redo.xpm  (+2 more)
qgen/source/: locations_list_box.cpp  main.cpp  main_window.cpp  main_window_presenter.cpp  menu_bar.cpp  tool_bar.cpp
qsp/: _cleanup_linux_x86  _cleanup_win32.cmd  _control.c  _excludes_win32.txt  actions.c  actions.h  callbacks.c  callbacks.h  codetools.c  codetools.h  coding.c  coding.h  common.c  common.h  declarations.h  errors.c  errors.h  game.c  game.h  linux_x86_build  locations.c  locations.h  mathops.c  mathops.h  memory.c  memory.h  memwatch.h  menu.c  menu.h  objects.c  objects.h  playlist.c  playlist.h  qsp.h  regexp.c  regexp.h  statements.c  statements.h  text.c  text.h  (+13 more)
qsp/bindings/: bindings_config.h  qsp.h
qsp/bindings/android/: android.h  android_callbacks.c  android_coding.c  android_control.c  android_platform.c
qsp/bindings/default/: default_callbacks.c  default_coding.c  default_control.c  default_platform.c  qsp_default.h
qsp/bindings/flash/: flash.h  flash_callbacks.c  flash_coding.c  flash_control.c  flash_encodings.c
qsp/bindings/java/: QSPLib.java  com_libqsp_jni_QSPLib.h  java.h  java_callbacks.c  java_coding.c  java_control.c  java_files.c  java_platform.c  qsp_java.h
qsp/build_wx/: wxPatch.diff
qsp/build_wx/linux_x86/: update
qsp/build_wx/win32/: create_patch.cmd  update.cmd
qsp/common/: qsp.h
qsp/create_lang/: qspgui_en.mo  qspgui_en.po  qspgui_eo.mo  qspgui_eo.po  qspgui_ru.mo  qspgui_ru.po  qspgui_uk.mo  qspgui_uk.po
qsp/create_lang/win32/: po_update.cmd
qsp/onig/: regcomp.c  regenc.c  regenc.h  regerror.c  regexec.c  regint.h  regparse.c  st.c  st.h
qsp/onig/enc/: ascii.c  cp1251.c  koi8_r.c  unicode.c  utf16_be.c  utf16_le.c  utf32_be.c  utf32_le.c
qsp/qsp/: linux_x86_qsp.cbp  win32_qsp.cbp  win32_qsp.vcproj
qsp/qsp/src/: _control.c  actions.c  actions.h  callbacks.c  callbacks.h  codetools.c  codetools.h  coding.c  coding.h  common.c  common.h  declarations.h  errors.c  errors.h  game.c  game.h  locations.c  locations.h  math.c  math.h  mathops.c  mathops.h  menu.c  menu.h  objects.c  objects.h  playlist.c  playlist.h  qsp.h  statements.c  statements.h  text.c  text.h  time.c  time.h  variables.c  variables.h  variant.c  variant.h
qsp/qspgui/: linux_x86_qspgui.cbp  win32_qspgui.cbp  win32_qspgui.vcproj
qsp/qspgui/src/: animwin.cpp  animwin.h  app.cpp  app.h  callbacks_gui.cpp  callbacks_gui.h  comtools.cpp  comtools.h  fmod.h  fmod_errors.h  fmod_memoryinfo.h  frame.cpp  frame.h  imgcanvas.cpp  imgcanvas.h  initevent.cpp  initevent.h  inputbox.cpp  inputbox.h  inputdlg.cpp  inputdlg.h  keyevent.cpp  keyevent.h  listbox.cpp  listbox.h  msgdlg.cpp  msgdlg.h  qsp.h  textbox.cpp  textbox.h  transhelper.cpp  transhelper.h  wheelevent.cpp  wheelevent.h
txt2gam/: _cleanup_win32.cmd  win32_txt2gam.cbp  win32_txt2gam.vcproj  win32_vs.sln
txt2gam/src/: coding.c  coding.h  declarations.h  locations.c  locations.h  main.c  main.h  memwatch.c  text.c  text.h
(+104 files in other folders)
